; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_cp-gimplify.c_gimplify_while_stmt.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_cp-gimplify.c_gimplify_while_stmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NULL_TREE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @gimplify_while_stmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gimplify_while_stmt(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = load i32, i32* %4, align 4
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @WHILE_COND(i32 %6)
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @WHILE_BODY(i32 %8)
  %10 = load i32, i32* @NULL_TREE, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @WHILE_ATTRIBUTES(i32 %11)
  %13 = load i32, i32* @NULL_TREE, align 4
  %14 = call i32 @gimplify_cp_loop(i32 %7, i32 %9, i32 %10, i32 %12, i32 1, i32 %13)
  %15 = load i32*, i32** %2, align 8
  store i32 %14, i32* %15, align 4
  ret void
}

declare dso_local i32 @gimplify_cp_loop(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @WHILE_COND(i32) #1

declare dso_local i32 @WHILE_BODY(i32) #1

declare dso_local i32 @WHILE_ATTRIBUTES(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
